:sparkles: Finalize integration

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,19 @@
 /* Misc */
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 
 $vue-color: #46bd87;
 $danger-color: #ea4d46;
+
+$primaryColor1: hsl(31, 77%, 52%);
+$primaryColor2: hsl(184, 100%, 22%);
+$primaryColor3: hsl(179, 100%, 13%);
+
+$neutralColor1: hsla(0, 0%, 100%, 0.75);
+$neutralColor2: hsl(0, 0%, 95%);
+
+$textFont1: 'Lexend Deca', sans-serif;
+$textFont2: 'Big Shoulders Display', cursive;
+
 
 /* Navbar */
 
